js/js.translator/testData/incremental/invalidation/privateDeclarationLeakThroughDefaultParam/main/f.2.kt
private val prop get() = "2"

internal inline fun foo(lambda: () -> String = ::prop): String {
    return lambda()
}
